// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login/> snapshot progress bar behavior 1`] = `
<div
  className="row"
>
  <div
    className="col-sm"
  />
  <div
    className="col-sm-12 col-md-8 col-lg-8 sc-bdVaJa bjmueK"
  >
    <form>
      <div
        className="input-group fluid"
      >
        <input
          className="sc-bxivhb gkfUBt"
          id="emailField"
          onChange={[Function]}
          placeholder="Email"
          type="email"
          value=""
        />
      </div>
      <div
        className="input-group fluid"
      >
        <input
          className="sc-bxivhb gkfUBt"
          id="passwordField"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <div
        className="input-group fluid sc-ifAKCX kNZLxY"
      />
      <div
        className="input-group fluid"
      >
        <div
          className="sc-bwzfXH eJvkvQ"
        >
          <div
            className="spinner-donut"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="col-sm"
  />
</div>
`;

exports[`<Login/> snapshot test 1`] = `
<div
  className="row"
>
  <div
    className="col-sm"
  />
  <div
    className="col-sm-12 col-md-8 col-lg-8 sc-bdVaJa bjmueK"
  >
    <form>
      <div
        className="input-group fluid"
      >
        <input
          className="sc-bxivhb gkfUBt"
          id="emailField"
          onChange={[Function]}
          placeholder="Email"
          type="email"
          value=""
        />
      </div>
      <div
        className="input-group fluid"
      >
        <input
          className="sc-bxivhb gkfUBt"
          id="passwordField"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <div
        className="input-group fluid sc-ifAKCX kNZLxY"
      />
      <div
        className="input-group fluid"
      >
        <input
          className="primary sc-htpNat iJpthS"
          id="submitButton"
          onClick={[Function]}
          type="submit"
          value="Submit"
        />
      </div>
    </form>
  </div>
  <div
    className="col-sm"
  />
</div>
`;
